objects/Email__c.object
<CustomObject>
    <fields>
        <fullName>ActivityId__c</fullName>
        <label>ActivityId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BccAddress__c</fullName>
        <label>BccAddress</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CcAddress__c</fullName>
        <label>CcAddress</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Email_Type_Color__c</fullName>
        <formula>If( Not(ISPICKVAL( Email_Type__c , &quot;&quot;)), 
IMAGE( 
IF( ISPICKVAL( Email_Type__c , &quot;Severity Email&quot;), &quot;/resource/red_dot&quot;,
IF( ISPICKVAL( Email_Type__c , &quot;COS Comment&quot;), &quot;/resource/grey_dot&quot;, 
IF( ISPICKVAL( Email_Type__c , &quot;Write Case Note&quot;), &quot;/resource/blue_dot&quot;, 
IF( ISPICKVAL( Email_Type__c , &quot;Owner Email&quot;), &quot;/resource/yellow_dot&quot;,
IF( ISPICKVAL( Email_Type__c , &quot;Contact Notification&quot;), &quot;/resource/brown_dot&quot;,
IF( ISPICKVAL( Email_Type__c , &quot;Answer Customer Email&quot;), &quot;/resource/black_dot&quot;,
IF( ISPICKVAL( Email_Type__c , &quot;Jira comment&quot;), &quot;/resource/purple_dot&quot;,
IF( ISPICKVAL( Email_Type__c , &quot;Case Auto Closed&quot;), &quot;/resource/grey_dot&quot;, 
IF( ISPICKVAL( Email_Type__c , &quot;Customer Email&quot;), &quot;/resource/green_dot&quot;,&apos;&apos;
))))))))), &quot;Error&quot;),&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email Type Color</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Type__c</fullName>
        <label>Email Type</label>
        <picklist>
            <picklistValues>
                <fullName>Owner Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jira comment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Write Case Note</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contact Notification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solution Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Severity Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Answer Customer Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COS Comment</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FromAddress__c</fullName>
        <label>FromAddress</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FromName__c</fullName>
        <label>FromName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HasAttachment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HasAttachment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Headers__c</fullName>
        <label>Headers</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>HtmlBody__c</fullName>
        <label>HtmlBody</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Incoming__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Incoming</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MessageDate__c</fullName>
        <label>MessageDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Parent_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Emails</relationshipLabel>
        <relationshipName>Emails</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Public__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Public</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Row_id__c</fullName>
        <externalId>true</externalId>
        <label>Row id</label>
        <length>15</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Read</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Replied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Forwarded</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TextBody__c</fullName>
        <label>TextBody</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ToAddress__c</fullName>
        <label>ToAddress</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Visible_to_All__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Visible to All</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>is_Incoming__c</fullName>
        <defaultValue>false</defaultValue>
        <description>this field will get populated when email record get created.</description>
        <label>is Incoming</label>
        <type>Checkbox</type>
    </fields>
    <label>Email</label>
    <nameField>
        <displayFormat>Email-{000}</displayFormat>
        <label>Emails Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Emails</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>